Fix strange wrapping behaviour of links at the bottom.

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -127,6 +127,12 @@ body,
     }
   }
 
+  .links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
   > .links {
     font-size: 16px;
     justify-content: space-around;
@@ -146,12 +152,6 @@ body,
 
     .body {
       padding-top: 89px;
-    }
-
-    .links {
-      white-space: pre-wrap;
-      word-wrap: break-word;
-      text-align: center;
     }
   }
 }
@@ -195,9 +195,6 @@ body,
     }
 
     > .links {
-      display: flex;
-      flex-wrap: wrap;
-
       position: absolute;
       right: 0;
       bottom: 0;
